<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_RCC" Id="{89e03fdd-ce79-4cd4-8b3e-f2ec4b282ec5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_RCC
VAR
	CRIX_RCC_VRC_01_OPEN_OK : BOOL;
	CRIX_RCC_VRC_02_OPEN_OK : BOOL;
	CRIX_RCC_VRC_03_OPEN_OK : BOOL;
	CRIX_RCC_VRC_04_OPEN_OK : BOOL;
	
   

	
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[CRIX_RCC_GCP_01(PG=>);

(* Valve can open only when CRIX-RCC-VRC-02 and 03 are closed*)		
CRIX_RCC_VRC_01_OPEN_OK := ( CRIX_RCC_VRC_02.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_02.iq_stValve.q_xOPN_DO ) AND
                                    ( CRIX_RCC_VRC_03.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_03.iq_stValve.q_xOPN_DO ) ;
						   
CRIX_RCC_VRC_01(i_xExtILK_OK := CRIX_RCC_VRC_01_OPEN_OK, 
                i_xOverrideMode := xSystemOverrideMode_RCC, 
                 iq_stValve=> );

(* Valve can open only when CRIX-RCC-VRC-01 and 04 are closed*)				 
CRIX_RCC_VRC_02_OPEN_OK := ( CRIX_RCC_VRC_01.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_01.iq_stValve.q_xOPN_DO ) AND
                                    ( CRIX_RCC_VRC_04.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_04.iq_stValve.q_xOPN_DO );
						   
CRIX_RCC_VRC_02(i_xExtILK_OK := CRIX_RCC_VRC_02_OPEN_OK, 
                i_xOverrideMode := xSystemOverrideMode_RCC, 
                 iq_stValve=> );				 

(* Valve can open only when CRIX-RCC-GCP-01 reading <10 Torr and CRIX-RCC-VRC-01 and 04 are closed*)							 
CRIX_RCC_VRC_03_OPEN_OK := (CRIX_RCC_GCP_01.PG.rPRESS < 10 and CRIX_RCC_GCP_01.PG.xPRESS_OK ) AND
                                 ( CRIX_RCC_VRC_01.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_01.iq_stValve.q_xOPN_DO ) AND
                                              ( CRIX_RCC_VRC_04.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_04.iq_stValve.q_xOPN_DO );				 

CRIX_RCC_VRC_03(i_xExtILK_OK := CRIX_RCC_VRC_03_OPEN_OK, 
                i_xOverrideMode := xSystemOverrideMode_RCC, 
                 iq_stValve=> );

(* Valve can open only when CRIX-RCC-VRC-02 and 03 are closed*)		
CRIX_RCC_VRC_04_OPEN_OK := ( CRIX_RCC_VRC_02.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_02.iq_stValve.q_xOPN_DO ) AND
                                      ( CRIX_RCC_VRC_03.iq_stValve.i_xClsLS AND NOT CRIX_RCC_VRC_03.iq_stValve.q_xOPN_DO ) ;

CRIX_RCC_VRC_04(i_xExtILK_OK := CRIX_RCC_VRC_04_OPEN_OK, 
                i_xOverrideMode := xSystemOverrideMode_RCC, 
                 iq_stValve=> );				 ]]></ST>
    </Implementation>
    <LineIds Name="PRG_RCC">
      <LineId Id="5" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="41" Count="3" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="40" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="29" Count="3" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>